--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&family=Poppins:wght@100&display=swap');
+
 body {
-  margin: 0;
+  margin: ;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -9,6 +11,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  background-image: linear-gradient(to right, #2c3e50, #4ca1af);
 }
 
 code {
@@ -17,50 +22,63 @@ code {
 }
 
 .App {
-  margin-top: 5vh;
   padding: 0%;
   width:80vw;
-  height:100vh;
+  min-width: 288px;
+  height:100%;
   max-height: 800px;
   max-width: 60vw;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 30.6%;
+  grid-template-rows: repeat(6, 1fr);
   justify-content: center;
   gap: 2rem;
   border: 10px double white;
   border-radius: 10rem;
-  font-family: arial;
+  font-family: 'Miltonian Tattoo', arial;
+  box-shadow: rgba(255, 255, 255, 0.5) 0px 15px 90px;
 }
+
 .title {
-  font-size: 2.5rem;
+  font-size: 1.75rem;
+  margin-top: 5rem;
   font-weight: bold;
-  color: black;
-  text-align: center;
-  margin: auto 0;
-  grid-column: span 2;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-column: span 4;
+  grid-row: span 1;
 }
+
 .getButton {
   margin: auto auto;
-  grid-column: span 2;
+  grid-column: span 4;
+  grid-row: span 1;
 }
 .pokeName {
-  color: black;
-  font-size: 3rem;
-  grid-column: span 2;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  grid-column: span 4;
+  grid-row: span 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  text-transform: capitalize;
+  letter-spacing: 2px;
 }
 .pokeType {
-  color: black;
-  font-size: 2rem;
+  color: white;
+  font-size: 1.9rem;
+  font-weight: 400;
   font-style: italic;
-  grid-column: span 2;
+  grid-column: span 4;
+  grid-row: span 1;
   display: flex;
   align-items: center;
   justify-content: center;
+  text-transform: capitalize;
 }
 .pokePhoto {
   grid-column-start: 2;
@@ -68,13 +86,15 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
+  grid-row: span 2;
 }
 #pokeImg {
-  height: 25rem;
-  width: 25rem;
-  max-height: 100%;
-  max-width: 100%;
+  height: 15rem;
+  width: 15rem;
 }
+
+
+/* i did not design this myself, so credits are to whoever put this on a codepen */
 
 .glow-on-hover {
   width: 220px;
@@ -88,6 +108,8 @@ code {
   z-index: 0;
   border-radius: 10px;
   font-size: 1.25rem;
+  font-family: 'Miltonian Tattoo', arial;
+  letter-spacing: 4px;
 }
 
 .glow-on-hover:before {
